# oss-sdk-rs

./: .gitignore  Cargo.toml  README.md
examples/: append_object.rs  get_object.rs  list_object.rs  put_object.rs
src/: async_object.rs  async_service.rs  auth.rs  errors.rs  lib.rs  object.rs  oss.rs  prelude.rs  service.rs  utils.rs
src/model/: error.rs  mod.rs  object.rs
tests/: object.rs
tests/common/: mod.rs
