[package]
name = "oss-sdk-rs"
version = "1.2.0"
authors = ["NoXF <xianyou.cyq@gmail.com>","kingzcheung <kingzcheung@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/iFREEGROUP/oss-sdk-rs"

[dependencies]
tokio = {version = "1.28.0", features = ["full"]}
reqwest = {version = "0.11.17", features = ["json"]}
base64 = "0.21.0"
chrono = "0.4.20"
log = "0.4.17"
quick-xml = "0.31.0"
serde-xml-rs = "0.6.0"
derive_more = "0.99.5"
bytes = "1.0"
async-trait = "0.1.53"
httpdate = "1.0.2"
hmac = "0.12"
sha1 = "0.10"
lazy_static = "1.4.0"
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
serde_json = "1.0.96"

[target.'cfg(unix)'.dev-dependencies]
dotenvy = "0.15.7"

